# awardco-python-sdk

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
awardco/: __init__.py  awardco.py  awardco_session.py
awardco/recognition_service/: __init__.py  bulk_recognition.py  recognition_service.py
awardco/report_service/: __init__.py  report.py  report_id.py  report_request.py  report_service.py  report_status_response.py
src/: pyproject.toml
src/awardco/: __init__.py  awardco.py
src/awardco/report_service/: __init__.py  report_service.py  timezone.py
