[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awardco"
version = "0.1.2"
authors = [{name="Spencer Chavez", email="spencer.chavez@awardco.com"}]
requires-python=">=3.10"
license = {text="GNU General Public License"}
dependencies = [
    "httpx>=0.23.0",
    "pandas>=1.3.0"
]

[tool.setuptools.packages.find]
include = ["awardco*"]